--- a/Sprite Format.cbp
+++ b/Sprite Format.cbp
@@ -15,10 +15,12 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="png" />
+					<Add directory="zlib" />
 				</Compiler>
 			</Target>
 			<Target title="Shared Library Release">
-				<Option output="lib/libSprite" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option output="lib/Sprite" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="tdm_gcc_64_compiler" />
@@ -26,6 +28,8 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="png" />
+					<Add directory="zlib" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -40,6 +44,8 @@
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="png" />
+					<Add directory="zlib" />
 				</Compiler>
 			</Target>
 			<Target title="Static Library Release">
@@ -51,6 +57,8 @@
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="png" />
+					<Add directory="zlib" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -62,6 +70,13 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="0" />
 				<Option compiler="tdm_gcc_64_compiler" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="../FLTK" />
+				</Compiler>
+				<Linker>
+					<Add library="lib\libSprite.a" />
+				</Linker>
 			</Target>
 			<Target title="Release Gui">
 				<Option output="bin/Spriter" prefix_auto="1" extension_auto="1" />
@@ -69,15 +84,341 @@
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="tdm_gcc_64_compiler" />
+				<Compiler>
+					<Add directory="../FLTK" />
+				</Compiler>
+				<Linker>
+					<Add option="extlib\libfltk.a" />
+					<Add option="extlib\libfltk_forms.a" />
+					<Add option="-lole32" />
+					<Add option="-luuid" />
+					<Add option="-lcomctl32" />
+				</Linker>
 			</Target>
 		</Build>
 		<VirtualTargets>
 			<Add alias="All" targets="Static Library Release;Release Gui;Shared Library Release;" />
-			<Add alias="All Debug" targets="Shared Library Debug ;Debug Gui;Static Library Debug ;" />
+			<Add alias="All Debug" targets="Shared Library Debug;Debug Gui;Static Library Debug;" />
 		</VirtualTargets>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="png/png.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/png.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngconf.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngdebug.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngerror.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngget.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pnginfo.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngmem.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngpread.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngpriv.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngread.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngrio.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngrtran.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngrutil.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngset.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngstruct.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngtrans.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngwio.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngwrite.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngwtran.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="png/pngwutil.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="src/Spriter Gui/main.cpp">
+			<Option target="Debug Gui" />
+			<Option target="Release Gui" />
+		</Unit>
+		<Unit filename="zlib/adler32.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/compress.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/crc32.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/crc32.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/deflate.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/deflate.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/gzclose.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/gzguts.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/gzlib.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/gzread.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/gzwrite.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/infback.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inffast.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inffast.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inffixed.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inflate.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inflate.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inftrees.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/inftrees.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/trees.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/trees.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/uncompr.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/zconf.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/zlib.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/zutil.c">
+			<Option compilerVar="CC" />
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="zlib/zutil.h">
+			<Option target="Shared Library Debug " />
+			<Option target="Shared Library Release" />
+			<Option target="Static Library Debug " />
+			<Option target="Static Library Release" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
