--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,6 @@
 *.o
 *.obj
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
 # Executables
 *.exe
 *.out
@@ -24,5 +13,6 @@
 #*.layout
 *.depend
 obj/
+lib/
 bin/
 *.bat
