--- a/Sprite Format.cbp
+++ b/Sprite Format.cbp
@@ -20,7 +20,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Shared Library Release">
-				<Option output="lib/Sprite" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option output="lib/libSprite" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="tdm_gcc_64_compiler" />
@@ -36,7 +36,7 @@
 				</Linker>
 			</Target>
 			<Target title="Static Library Debug ">
-				<Option output="lib/Sprite-d" prefix_auto="1" extension_auto="1" />
+				<Option output="lib/statSprite-d" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -49,7 +49,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Static Library Release">
-				<Option output="lib/Sprite" prefix_auto="1" extension_auto="1" />
+				<Option output="lib/statSprite" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
@@ -73,6 +73,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="../fltk-1.3.2" />
+					<Add directory="include/Spriter Gui" />
 				</Compiler>
 			</Target>
 			<Target title="Release Gui">
@@ -83,6 +84,7 @@
 				<Option compiler="tdm_gcc_64_compiler" />
 				<Compiler>
 					<Add directory="../fltk-1.3.2" />
+					<Add directory="include/Spriter Gui" />
 				</Compiler>
 				<Linker>
 					<Add option="extlib\libfltk.a" />
@@ -100,6 +102,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="include/Spriter Gui/AnimTable.hpp">
+			<Option target="Debug Gui" />
+			<Option target="Release Gui" />
+		</Unit>
 		<Unit filename="png/png.c">
 			<Option compilerVar="CC" />
 			<Option target="Shared Library Debug " />
@@ -240,6 +246,10 @@
 			<Option target="Shared Library Release" />
 			<Option target="Static Library Debug " />
 			<Option target="Static Library Release" />
+		</Unit>
+		<Unit filename="src/Spriter Gui/AnimTable.cpp">
+			<Option target="Debug Gui" />
+			<Option target="Release Gui" />
 		</Unit>
 		<Unit filename="src/Spriter Gui/main.cpp">
 			<Option target="Debug Gui" />
